--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>StreetPet</title>
         <link rel="stylesheet" type="text/css" media="screen" href="estilo.css"/> 
+	    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177436448-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-177436448-1');
+</script>
+
     </head>
 
     <body>
